# radarchart

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example.csv
radarchart/: __init__.py  main.py  ui.py
