[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radarchart-py"
version = "0.1.9"
description = "RadarChart: A Python library for customizable radar charts (spider plots)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sabir Ribas", email = "sabirribas+pypi@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.2.3",
    "altair>=5.5.0",
    "matplotlib>=3.9.2",
    "streamlit>=1.44.0",
]

[project.urls]
Homepage = "https://github.com/sabirribas/radarchart"

[project.scripts]
radarchart = "radarchart.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["radarchart*"]
exclude = ["venv*", ".venv*", "dist*", "*.egg-info*"]
